--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
-
+    implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
 
 }
