--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_box"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_box"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab5G1">
+        android:theme="@style/miTema">
         <activity android:name=".FilesActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
